[gd_scene load_steps=2 format=3 uid="uid://chqqx1udn0iux"]

[ext_resource type="Script" path="res://Objects/Battle/Enemies/BulletSpawner.gd" id="1"]

[node name="BulletSpawner" type="Node2D"]
script = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
